turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:8: error: not enough arguments for method trouverColor: (t: Array[java.awt.Color], c: java.awt.Color)Int.
Unspecified value parameter c.
  val ic:Color = trouverColor(c)
                             ^Turmite:9: error: type mismatch;
 found   : java.awt.Color
 required: Int
  val tr = rule(state)(ic)
                       ^